--- a/generic-oc-client-cronjob-policy.yaml
+++ b/generic-oc-client-cronjob-policy.yaml
@@ -29,12 +29,14 @@ spec:
               kind: ServiceAccount
               metadata:
                 name: occlient
+                namespace: default
           - complianceType: musthave
             objectDefinition:
               apiVersion: rbac.authorization.k8s.io/v1
               kind: ClusterRoleBinding
               metadata:
                 name: cluster-admin-occlient-sa-crb
+                namespace: default
               roleRef:
                 name: cluster-admin
                 apiGroup: rbac.authorization.k8s.io
