--- a/generic-oc-client-cronjob-policy.yaml
+++ b/generic-oc-client-cronjob-policy.yaml
@@ -55,6 +55,7 @@ spec:
               kind: CronJob
               metadata:
                 name: basic-oc-client
+                namespace: jobnamespace 
                 labels:
                   purpose: basic-oc-client
               spec:
